Refactored for Attachment API